# regorus

./: .gitignore  Cargo.toml
.github/skills/verus-verification/: SKILL.md
src/: lib.rs  number.rs
src/verify/: bigint_assumptions.rs  bigint_proofs.rs  f64_assumptions.rs  mod.rs  number_specs.rs
verus-shim/: Cargo.toml
verus-shim/src/: lib.rs
